--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,42 @@
-node_modules
-# Logs
-logs
-*.log
+# Dependency directories
+node_modules/
+.pnpm/
+.vite/
+dist/
+build/
+
+# Local environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Editor/IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Mac system files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Parcel cache (if using)
+.cache/
+
+# Lint and formatting files
+.eslintcache
+.prettierignore
+.prettiercache
+
+# Coverage directory used by testing tools like jest
+coverage/
+
+# TypeScript build cache
+*.tsbuildinfo
