--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.2",
